- fix sonar and api-lint issues